[CELEBORN-1797] Support to adjust the logger level with RESTful API for debug
